--- a/shadow.conf
+++ b/shadow.conf
@@ -5,6 +5,8 @@ bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, fe80::/10, fc00::/7, localhost, *.local, *.lan, *.internal, e.crashlytics.com, captive.apple.com, sequoia.apple.com, seed-sequoia.siri.apple.com, *.ls.apple.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,233.252.0.0/24,224.0.0.0/4,255.255.255.255/32,::1/128,::ffff:0:0/96,::ffff:0:0:0/96,64:ff9b::/96,64:ff9b:1::/48,100::/64,2001::/32,2001:20::/28,2001:db8::/32,2002::/16,3fff::/20,5f00::/16,fc00::/7,fe80::/10,ff00::/8
 dns-server = https://dns.alidns.com/dns-query, https://doh.pub/dns-query
+
+
 [Rule]
 
 # ===== ChatGPT / OpenAI =====
@@ -24,14 +26,9 @@ DOMAIN-SUFFIX,ai.com,GPT              # 历史短域
 DOMAIN-SUFFIX,sentry.io,GPT           # 日志上报
 DOMAIN-SUFFIX,auth0.com,GPT           # OAuth 登录
 
-# （可选）Cloudflare 主要 Anycast 段
-#IP-CIDR,104.16.0.0/13,GPT
-#IP-CIDR,172.64.0.0/13,GPT
-#IP-CIDR,188.114.96.0/20,GPT
-# ============================
-
 
 DOMAIN-SUFFIX,ping0.cc,GPT   #测节点质量
+
 
 #
 # 国内外划分，对中国网站直连，外国网站代理。
@@ -524,7 +521,7 @@ DOMAIN-SUFFIX,wikimedia.org,Other-GPT
 
 
 
-#GEOIP,CN,DIRECT
+GEOIP,CN,DIRECT
 
 
 
