add common sites

--- a/shadow.conf
+++ b/shadow.conf
@@ -516,6 +516,27 @@ DOMAIN-SUFFIX,wikipedia.org,Other-GPT
 DOMAIN-SUFFIX,wikimedia.org,Other-GPT
 
 
+# 常用的ai网站
+########  Gemini  ########
+# Web 端 & 手机 App
+DOMAIN-SUFFIX,gemini.google.com,Other-GPT       # 主站 UI :contentReference[oaicite:0]{index=0}
+# 官方生成式语言 API
+DOMAIN, generativelanguage.googleapis.com,Other-GPT   # Gemini API :contentReference[oaicite:1]{index=1}
+# Google AI Studio & 相关控制台
+DOMAIN-SUFFIX,aistudio.google.com,Other-GPT
+DOMAIN-SUFFIX,console.aistudio.google.com,Other-GPT
+
+########  Grok (xAI)  ########
+# 官网 & Web 端
+DOMAIN-SUFFIX,grok.com,Other-GPT
+# API 与控制台
+DOMAIN-SUFFIX,grok.xai.com,Other-GPT            # api.grok.xai.com/v1 … :contentReference[oaicite:2]{index=2}
+DOMAIN-SUFFIX,x.ai,Other-GPT                    # docs.x.ai / console.x.ai 等
+
+########  可选（更“保险”但流量更多）########
+# 若你用到 Vertex AI / Gemini on GCP，可追加：
+DOMAIN-KEYWORD,cloudaicompanion,Other-GPT
+DOMAIN, cloudaicompanion.googleapis.com,Other-GPT
 
 
 
@@ -524,14 +545,7 @@ DOMAIN-SUFFIX,wikimedia.org,Other-GPT
 GEOIP,CN,DIRECT
 
 
-
 FINAL,GPT
 
 
 
-[URL Rewrite]
-^https?://(www.)?(g|google)\.cn https://www.google.com 302
-
-
-[MITM]
-hostname = *.google.cn,*.googlevideo.com
