--- a/shadow.conf
+++ b/shadow.conf
@@ -516,6 +516,26 @@ DOMAIN-SUFFIX,wikipedia.org,Other-GPT
 DOMAIN-SUFFIX,wikimedia.org,Other-GPT
 
 
+########  npm Registry  ########
+DOMAIN-SUFFIX,npmjs.org,Other-GPT      # 包括 registry.npmjs.org
+DOMAIN-SUFFIX,yarnpkg.com,Other-GPT    # Yarn 的 CDN，也经常被调用
+DOMAIN-SUFFIX,jsdelivr.net,Other-GPT   # 部分 npm 包走的公共 CDN，可选
+
+########  开发者工具  ########
+DOMAIN-SUFFIX,github.com,Other-GPT        # 若现有规则已覆盖可跳过
+DOMAIN-SUFFIX,jetbrains.com,Other-GPT
+
+########  第三方监控 / 支付  ########
+DOMAIN-SUFFIX,datadoghq.com,Other-GPT
+DOMAIN-SUFFIX,stripe.com,Other-GPT
+DOMAIN-SUFFIX,stripe.network,Other-GPT
+
+########  其它 AI / 支持网站  ########
+DOMAIN-SUFFIX,aihubmix.com,Other-GPT
+DOMAIN-SUFFIX,apple.com,DIRECT
+
+
+
 # 常用的ai网站
 ########  Gemini  ########
 # Web 端 & 手机 App
