--- a/shadow.conf
+++ b/shadow.conf
@@ -535,6 +535,19 @@ DOMAIN-SUFFIX,aihubmix.com,Other-GPT
 DOMAIN-SUFFIX,apple.com,DIRECT
 
 
+########  Apple / 证书 ########
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,digicert.com,Other-GPT   # OCSP 查询
+
+########  IFTTT 自动化 ########
+DOMAIN-SUFFIX,ifttt.com,Other-GPT
+
+########  Customer.io 邮件 ########
+DOMAIN-SUFFIX,customeriomail.com,Other-GPT
+
+
+
+
 
 # 常用的ai网站
 ########  Gemini  ########
