--- a/shadow.conf
+++ b/shadow.conf
@@ -571,6 +571,7 @@ DOMAIN-SUFFIX,x.ai,OTHER-GPT                    # docs.x.ai / console.x.ai 等
 DOMAIN-KEYWORD,cloudaicompanion,OTHER-GPT
 DOMAIN, cloudaicompanion.googleapis.com,OTHER-GPT
 
+DOMAIN-KEYWORD,google,Other-GPT
 
 
 
