--- a/shadow.conf
+++ b/shadow.conf
@@ -573,6 +573,9 @@ DOMAIN, cloudaicompanion.googleapis.com,OTHER-GPT
 
 DOMAIN-KEYWORD,google,Other-GPT
 
+########  开发者监控 / 订阅后台  ########
+DOMAIN-SUFFIX,sentry.io,OTHER-GPT
+DOMAIN-SUFFIX,revenuecat.com,OTHER-GPT
 
 
 
