--- a/shadow.conf
+++ b/shadow.conf
@@ -571,11 +571,43 @@ DOMAIN-SUFFIX,x.ai,OTHER-GPT                    # docs.x.ai / console.x.ai 等
 DOMAIN-KEYWORD,cloudaicompanion,OTHER-GPT
 DOMAIN, cloudaicompanion.googleapis.com,OTHER-GPT
 
-DOMAIN-KEYWORD,google,Other-GPT
+DOMAIN-KEYWORD,google,OTHER-GPT
 
 ########  开发者监控 / 订阅后台  ########
 DOMAIN-SUFFIX,sentry.io,OTHER-GPT
 DOMAIN-SUFFIX,revenuecat.com,OTHER-GPT
+
+
+
+########  Google & 静态 CDN  ########
+DOMAIN-KEYWORD,google,OTHER-GPT
+DOMAIN-SUFFIX,gstatic.com,OTHER-GPT
+DOMAIN-SUFFIX,googleapis.com,OTHER-GPT
+DOMAIN-SUFFIX,googletagmanager.com,OTHER-GPT
+DOMAIN-SUFFIX,google-analytics.com,OTHER-GPT
+DOMAIN-SUFFIX,doubleclick.net,OTHER-GPT
+DOMAIN-SUFFIX,jsdelivr.net,OTHER-GPT
+DOMAIN-SUFFIX,cloudflare.com,OTHER-GPT
+DOMAIN-SUFFIX,highcharts.com,OTHER-GPT
+DOMAIN-SUFFIX,jquery.com,OTHER-GPT
+
+########  第三方 SaaS / 监控 / 支付  ########
+DOMAIN-SUFFIX,producthunt.com,OTHER-GPT
+DOMAIN-SUFFIX,shields.io,OTHER-GPT
+DOMAIN-SUFFIX,stripeassets.com,OTHER-GPT
+DOMAIN-SUFFIX,trackingnagi.org,OTHER-GPT
+DOMAIN-SUFFIX,substackcdn.com,OTHER-GPT
+DOMAIN-SUFFIX,bing.com,OTHER-GPT
+DOMAIN-SUFFIX,brave.com,OTHER-GPT
+
+########  Apple & 其它 LLM 平台  ########
+DOMAIN-SUFFIX,apple.com,OTHER-GPT          # 若更放心也可改 DIRECT
+DOMAIN-SUFFIX,apple-cloudkit.com,OTHER-GPT
+DOMAIN-SUFFIX,toit.io,OTHER-GPT
+DOMAIN-SUFFIX,x.ai,OTHER-GPT
+DOMAIN-SUFFIX,aihubmix.com,OTHER-GPT
+DOMAIN-SUFFIX,chatboxai.app,OTHER-GPT
+
 
 
 
