--- a/shadow.conf
+++ b/shadow.conf
@@ -600,6 +600,11 @@ DOMAIN-SUFFIX,substackcdn.com,OTHER-GPT
 DOMAIN-SUFFIX,bing.com,OTHER-GPT
 DOMAIN-SUFFIX,brave.com,OTHER-GPT
 
+###video
+DOMAIN-SUFFIX,rou.video,Other-GPT
+DOMAIN-SUFFIX,missav.ws,Other-GPT
+
+
 ########  Apple & 其它 LLM 平台  ########
 DOMAIN-SUFFIX,apple.com,OTHER-GPT          # 若更放心也可改 DIRECT
 DOMAIN-SUFFIX,apple-cloudkit.com,OTHER-GPT
