--- a/shadow.conf
+++ b/shadow.conf
@@ -605,6 +605,10 @@ DOMAIN-SUFFIX,rou.video,Other-GPT
 DOMAIN-SUFFIX,missav.ws,Other-GPT
 
 
+#test speed
+KEYWORD,speedtest,Other-GPT
+
+
 ########  Apple & 其它 LLM 平台  ########
 DOMAIN-SUFFIX,apple.com,OTHER-GPT          # 若更放心也可改 DIRECT
 DOMAIN-SUFFIX,apple-cloudkit.com,OTHER-GPT
