--- a/shadow.conf
+++ b/shadow.conf
@@ -606,7 +606,7 @@ DOMAIN-SUFFIX,missav.ws,Other-GPT
 
 
 #test speed
-KEYWORD,speedtest,Other-GPT
+DOMAIN-KEYWORD,speedtest,Other-GPT
 
 
 ########  Apple & 其它 LLM 平台  ########
