--- a/shadow.conf
+++ b/shadow.conf
@@ -605,7 +605,7 @@ DOMAIN-SUFFIX,rou.video,Other-GPT
 DOMAIN-SUFFIX,missav.ws,Other-GPT
 
 
-#test speed
+######test speed
 DOMAIN-KEYWORD,speedtest,OTHER-GPT
 
 
