--- a/shadow.conf
+++ b/shadow.conf
@@ -607,6 +607,8 @@ DOMAIN-SUFFIX,missav.ws,Other-GPT
 
 ######test speed
 DOMAIN-KEYWORD,speedtest,OTHER-GPT
+DOMAIN-KEYWORD,yfsp,OTHER-GPT
+DOMAIN-KEYWORD,missav,OTHER-GPT
 
 
 ########  Apple & 其它 LLM 平台  ########
