--- a/shadow.conf
+++ b/shadow.conf
@@ -609,6 +609,9 @@ DOMAIN-SUFFIX,missav.ws,Other-GPT
 DOMAIN-KEYWORD,speedtest,OTHER-GPT
 DOMAIN-KEYWORD,yfsp,OTHER-GPT
 DOMAIN-KEYWORD,missav,OTHER-GPT
+DOMAIN-KEYWORD,tv,OTHER-GPT
+DOMAIN-KEYWORD,etc,OTHER-GPT
+DOMAIN-KEYWORD,ipify,OTHER-GPT
 
 
 ########  Apple & 其它 LLM 平台  ########
