--- a/shadow.conf
+++ b/shadow.conf
@@ -612,6 +612,8 @@ DOMAIN-KEYWORD,missav,OTHER-GPT
 DOMAIN-KEYWORD,tv,OTHER-GPT
 DOMAIN-KEYWORD,etc,OTHER-GPT
 DOMAIN-KEYWORD,ipify,OTHER-GPT
+DOMAIN-KEYWORD,vip,OTHER-GPT
+DOMAIN-KEYWORD,s8-e1,OTHER-GPT
 
 
 ########  Apple & 其它 LLM 平台  ########
